main/django-react-sheetapp/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sheetapp # Define the namespace for the application
