main/django-react-sheetapp/k8s/07-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: sheetapp
spec:
  selector:
    app: backend # Selects pods from the backend deployment
  ports:
    - protocol: TCP
      port: 80       # Service listens on port 80 (standard HTTP)
      targetPort: 8000 # Pods listen on port 8000 (where Gunicorn runs)
  type: ClusterIP   # Expose only within the cluster (Ingress will handle external access)
